--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,16 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: ""
-#url: "http://nacre.org.au" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://nacre.org.au" # the base hostname & protocol for your site, e.g. http://example.com
 facebook_username: nacrepage
 
 # Build settings
 markdown: kramdown
 plugins:
   - jekyll-feed
+sass:
+    sass_dir: _sass
+    style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
