--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ plugins:
   - jekyll-feed
 sass:
     sass_dir: _sass
-    style: compressed
+    # style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
