--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ sass:
     sass_dir: _sass
     # style: compressed
 
+currentProgramYear: 2017
+volEmail: volunteer@nacre.org.au
+infoEmail: info@nacre.org.au
+
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
