--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: NACRE
 email: info@nacre.org.au
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    NACRE is a non-for-profit organization dedicated to the betterment of educational opportunities available for children in rural China. Our mission is achieved through the efforts of our Volunteer Mentors, whose experiences and opportunities are valued as core priorities of NACRE’s program.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://nacre.org.au" # the base hostname & protocol for your site, e.g. http://example.com
 facebook_username: nacrepage
@@ -27,6 +25,7 @@ facebook_username: nacrepage
 markdown: kramdown
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 sass:
     sass_dir: _sass
     # style: compressed
